# Starry

./: CMakeLists.txt
.cache/clangd/index/: Assimp.cpp.D41551100C7405F8.idx  BaseImporter.cpp.8C9A5825D77A44A6.idx  BaseImporter.h.0CF5156CBF1AC99F.idx  BaseProcess.cpp.1230871977D5AC29.idx  BaseProcess.h.F5321B3D80EA4B08.idx  Bitmap.cpp.F4B77058A233BAB4.idx  Bitmap.h.80A78738A9F9275D.idx  ByteSwapper.h.9CA709CD09FF896D.idx  CInterfaceIOWrapper.cpp.9639E2603909E9E3.idx  CInterfaceIOWrapper.h.EC5F474420B7D5B9.idx  CXMLReaderImpl.h.D5B0EF24BCC6A02F.idx  CalcTangentsProcess.cpp.F3BD7EAC9DEE6C1D.idx  CalcTangentsProcess.h.7042085C86030EA9.idx  ComputeUVMappingProcess.cpp.795D03BD4EAD6026.idx  ComputeUVMappingProcess.h.F99D052331915DD3.idx  ConvertToLHProcess.cpp.A994678E942F921A.idx  ConvertToLHProcess.h.9E2FEA88F76176EC.idx  CreateAnimMesh.cpp.8E592C1AD09CB60F.idx  CreateAnimMesh.h.9C4EDCDA3FEF1C92.idx  DDLNode.cpp.10F4857A62BB8BEF.idx  DDLNode.h.B8FDEBE477998858.idx  DeboneProcess.cpp.2C677B43787D7192.idx  DeboneProcess.h.D680C499F652295C.idx  DefaultIOStream.cpp.608252A14D4E8952.idx  DefaultIOStream.h.D8F726D76B98A98C.idx  DefaultIOSystem.cpp.83767F762B7D9C74.idx  DefaultIOSystem.h.62E3C2404F5C23AF.idx  DefaultLogger.cpp.2930D59E86C69DA2.idx  DefaultLogger.hpp.B0660C1FFCAE4534.idx  (+451 more)
data/planet/: Tetrahedron.mtl
data/shader/: 10.3.planet.fs  particle.fs  particle.vs
src/: CMakeLists.txt  GameMode.cpp  GameMode.h  Octree.cpp  Octree.h  Scene.cpp  Scene.h  config.h.in  gravity_sim.cpp  main.cpp
src/shaders/: nebula.frag  screen_quad.vert  star.frag  star.vert
